checkers/tests/igj/MethodInvocation.out
MethodInvocation.java:17: error: (method.invocation.invalid)
MethodInvocation.java:22: error: (method.invocation.invalid)
MethodInvocation.java:27: error: (method.invocation.invalid)
MethodInvocation.java:31: error: (method.invocation.invalid)
MethodInvocation.java:34: error: (method.invocation.invalid)
MethodInvocation.java:36: error: (method.invocation.invalid)
MethodInvocation.java:37: error: (method.invocation.invalid)
MethodInvocation.java:39: error: (method.invocation.invalid)
MethodInvocation.java:43: error: (method.invocation.invalid)
MethodInvocation.java:46: error: (method.invocation.invalid)
MethodInvocation.java:48: error: (method.invocation.invalid)
MethodInvocation.java:51: error: (method.invocation.invalid)
MethodInvocation.java:54: error: (method.invocation.invalid)
MethodInvocation.java:58: error: (method.invocation.invalid)
MethodInvocation.java:61: error: (method.invocation.invalid)
MethodInvocation.java:63: error: (method.invocation.invalid)
MethodInvocation.java:64: error: (method.invocation.invalid)
MethodInvocation.java:66: error: (method.invocation.invalid)
MethodInvocation.java:70: error: (method.invocation.invalid)
MethodInvocation.java:71: error: (method.invocation.invalid)
MethodInvocation.java:73: error: (method.invocation.invalid)
MethodInvocation.java:75: error: (method.invocation.invalid)
MethodInvocation.java:76: error: (method.invocation.invalid)
MethodInvocation.java:78: error: (method.invocation.invalid)
MethodInvocation.java:81: error: (method.invocation.invalid)
MethodInvocation.java:85: error: (method.invocation.invalid)
MethodInvocation.java:88: error: (method.invocation.invalid)
MethodInvocation.java:90: error: (method.invocation.invalid)
MethodInvocation.java:91: error: (method.invocation.invalid)
MethodInvocation.java:93: error: (method.invocation.invalid)
MethodInvocation.java:97: error: (method.invocation.invalid)
MethodInvocation.java:98: error: (method.invocation.invalid)
MethodInvocation.java:102: error: (method.invocation.invalid)
MethodInvocation.java:103: error: (method.invocation.invalid)
MethodInvocation.java:108: error: (method.invocation.invalid)
MethodInvocation.java:112: error: (method.invocation.invalid)
MethodInvocation.java:115: error: (method.invocation.invalid)
MethodInvocation.java:117: error: (method.invocation.invalid)
MethodInvocation.java:118: error: (method.invocation.invalid)
MethodInvocation.java:120: error: (method.invocation.invalid)
MethodInvocation.java:125: error: (method.invocation.invalid)
MethodInvocation.java:130: error: (method.invocation.invalid)
MethodInvocation.java:135: error: (method.invocation.invalid)
MethodInvocation.java:141: error: (method.invocation.invalid)
MethodInvocation.java:144: error: (method.invocation.invalid)
MethodInvocation.java:146: error: (method.invocation.invalid)
MethodInvocation.java:149: error: (method.invocation.invalid)
MethodInvocation.java:151: error: (method.invocation.invalid)
MethodInvocation.java:154: error: (method.invocation.invalid)
MethodInvocation.java:158: error: (method.invocation.invalid)
MethodInvocation.java:159: error: (method.invocation.invalid)
MethodInvocation.java:161: error: (method.invocation.invalid)
MethodInvocation.java:163: error: (method.invocation.invalid)
MethodInvocation.java:164: error: (method.invocation.invalid)
MethodInvocation.java:166: error: (method.invocation.invalid)
